2012-09-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* Makefile: New file.
